--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="col2 col">
-                    <h2>Intructions</h2>
+                    <h2>Instructions</h2>
                     <table class="instructions">
                         <tr><td><p class="number">1</p></td><td class="instruction_step">Crack eggs and stuff</td></tr>
                         <tr><td><p class="number">2</p></td><td class="instruction_step">Mix well until smooth</td></tr>
